crystal-facet-uml (1.68.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * stereotype icons of diagrams are left-aligned
  * element_kind of diagrams are displayed

 -- Andreas Warnke <cfu@andreaswarnke.de>  Tue, 03 Feb 2026 21:00:00 +0100

crystal-facet-uml (1.67.4) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * downwards compatibility for a future json format version
  * format error in generated json schema fixed

 -- Andreas Warnke <cfu@andreaswarnke.de>  Tue, 20 Jan 2026 20:00:00 +0100

crystal-facet-uml (1.67.3) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * relationships between children stay sometimes within parent
  * relationships between self and child stay sometimes within self
  * relationships may overlap if same type and either same source or same dest.

 -- Andreas Warnke <cfu@andreaswarnke.de>  Thu, 11 Dec 2025 20:00:00 +0100

crystal-facet-uml (1.67.2) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * The .tmp-cfu temporary file of an already open database cannot be opened

 -- Andreas Warnke <cfu@andreaswarnke.de>  Thu, 13 Nov 2025 20:00:00 +0100

crystal-facet-uml (1.67.1) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * On Linux, app icon is installed to theme icons folder

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sun, 09 Nov 2025 06:00:00 +0100

crystal-facet-uml (1.67.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * Docbook output restructured to allow more compact page rendering
  * Snap-to-grid feature does not snap to border anymore, only inner grid
  * No auto-save at close when there are no changes
  * Detection and warning in case of concurrently modified database file
  * Old sqlite3-based file format is automatically converted to json-based cfuJ
  * Restore X11 icon size for Wayland

 -- Andreas Warnke <cfu@andreaswarnke.de>  Tue, 04 Nov 2025 18:30:00 +0100

crystal-facet-uml (1.66.1) UNRELEASED; urgency=medium

  [ Andreas Warnke ]